# internal/finance/ports/create_fund_provider_handler.go
@@ -4,10 +4,8 @@ import (
 	"encoding/json"
 	"net/http"
 	"sumni-finance-backend/internal/common/server/httperr"
+	"sumni-finance-backend/internal/common/server/response"
 	"sumni-finance-backend/internal/finance/app/command"
-
-	"github.com/go-chi/chi/v5/middleware"
-	"github.com/go-chi/render"
 )
 
 // Create a new fund provider
@@ -34,12 +32,5 @@ func (hs HttpServer) CreateFundProvider(w http.ResponseWriter, r *http.Request) 
 		return
 	}
 
-	requestID := middleware.GetReqID(r.Context())
-
-	response := map[string]string{
-		"request_id": requestID,
-	}
-
-	render.Status(r, http.StatusCreated)
-	render.JSON(w, r, response)
+	response.WriteJSON(w, r, http.StatusCreated, nil, nil)
 }
